tests/ui/error-codes/E0045.rs
extern "CrabLang" { fn foo(x: u8, ...); }   //~ ERROR E0045

fn main() {
}
